# prank

./: .clang-format  CMakeLists.txt
cmake/: prank_deps.cmake
prank/: CMakeLists.txt  config.hpp.in  driver.cpp  driver.hpp  exception_handler.cpp  exception_handler.hpp  prank.cpp
prank/exceptions/: help_request.hpp  usage_error.hpp
prank_testing/: CMakeLists.txt
scripts/: check-format.sh
